terraform/modules/ecs/main.tf
resource "aws_ecs_cluster" "this" {
  name = var.name
}

resource "aws_security_group" "ecs_sg" {
  name        = "ecs-ssh-sg"
  description = "Allow SSH inbound"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_launch_template" "ecs_node" {
  name_prefix   = "ecs-node-"
  image_id      = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name

  iam_instance_profile {
    name = var.iam_instance_profile_name
  }

  network_interfaces {
    security_groups = [aws_security_group.ecs_sg.id]
  }

  user_data = base64encode(<<EOF
#!/bin/bash
echo ECS_CLUSTER=${var.name} >> /etc/ecs/ecs.config
EOF
  )
}

resource "aws_autoscaling_group" "ecs_nodes" {
  desired_capacity  = 0
  max_size          = 1
  min_size          = 0
  vpc_zone_identifier = [var.subnet_id]
  health_check_type = "EC2"

  launch_template {
    id      = aws_launch_template.ecs_node.id
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    value               = var.name
    propagate_at_launch = true
  }
}

resource "aws_ecs_task_definition" "app" {
  family             = "url-shortener"
  network_mode       = "bridge"
  requires_compatibilities = ["EC2"]
  cpu                = "256"
  memory             = "512"
  execution_role_arn = var.task_execution_role_arn

  container_definitions = jsonencode([
    {
      name  = "url-app"
      image = var.ecr_image
      portMappings = [
        {
          containerPort = 3000
          hostPort      = 3000
        }
      ]
      environment = [
        {
          name  = "EC2_HOST"
          value = var.ec2_host
        }
      ]
    }
  ])
}

resource "aws_ecs_service" "app_service" {
  name            = "url-shortener-service"
  cluster         = aws_ecs_cluster.this.id
  task_definition = aws_ecs_task_definition.app.arn
  launch_type     = "EC2"
  desired_count   = 1
  depends_on = [aws_autoscaling_group.ecs_nodes]
}
